--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "user-profile",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nishant4214.github.io/user-profile-app",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -17,8 +18,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
